# ChooChoo

./: .clang-format  .clangd  .editorconfig  .gdbinit  .gitignore  CMakeLists.txt  Makefile  README  README.md
cmake/: GenerateSymbols.cmake
docker/: Dockerfile  build.sh
docs/: README-A0  README-K1  README-K2  README-K3  README-K4  README-TC1  report-TC1.md  report-a0.md  report-k1.md  report-k2.md  report-k3.md  report-k4.md
include/: boot_test.h  compiler.h  context.h  dlist.h  event.h  exception.h  idle.h  interrupt.h  klog.h  panic.h  params.h  printf.h  priority_queue.h  sched.h  string.h  symbol.h  syscall.h  syscall_list.h  task.h  types.h  uart.h  version.h.in
include/arch/: cpu.h  exception.h  gic.h  interrupts.h  kernel.h  registers.h  rpi.h
include/timer/: time.h  timer.h
include/uapi/: clock.h  compiler.h  idle.h  io.h  klog.h  log.h  name.h  priority_queue.h  random.h  syscall.h  syscall_list.h
include/uapi/arch/: cpu.h  registers.h  rpi.h
perf/: k2_srr_perf.csv
scripts/: calculate_deceleration.py  mmap_visualizer.py  qemu.run  srr_perf_build.sh  upload.sh
src/: boot_test.c  context.c  entry.S  entry.c  event.c  exception.c  idle.c  init.c  interrupt.c  klog.c  panic.c  printf.c  sched.c  string.c  symbol.c  syscall.c  task.c  uart.c
src/arch/: boot.S  exception.c  gic.c  kernel.ld  mmu.S  rpi.c
src/timer/: time.c  timer.c
src/uapps/: clock_server.c  idle_task.c  init.c  io_server.c  io_test.c  name_server.c  uapp.ld
src/uapps/include/: clock_server.h  idle_task.h  io_server.h  io_test.h  name_server.h  srr_perf.h
src/uapps/include/marklin/: error.h
src/uapps/include/marklin/command/: api.h  command.h
src/uapps/include/marklin/common/: blacklisted_sensors_list.h  constants.h  edge_resistance_list.h  track_node.h
src/uapps/include/marklin/conductor/: api.h  block.h  block_definitions.h  conductor.h  path.h  reversal_blacklist.h  sensor.h  switch.h
src/uapps/include/marklin/controller/: api.h  marklin.h
src/uapps/include/marklin/msgqueue/: api.h  msgqueue.h
src/uapps/include/marklin/topology/: api.h  topology.h  track.h
src/uapps/include/marklin/train/: api.h  calibration.h  kinematics.h  model.h  model_defaults.h  offline.h  train.h
src/uapps/include/marklin/train2/: api.h  model.h  train.h
src/uapps/include/marklin/tui/: tui.h
src/uapps/include/rps/: rps.h
src/uapps/marklin/command/: command.c
src/uapps/marklin/conductor/: block.c  block_definitions.c  conductor.c  path.c  sensor.c  switch.c
src/uapps/marklin/controller/: marklin.c
src/uapps/marklin/msgqueue/: msgqueue.c
src/uapps/marklin/topology/: topology.c  track_data.c
src/uapps/marklin/train/: calibration.c  model.c  model_defaults.c  offline.c  offline_acceleration.c  offline_stop_distance.c  offline_velocity.c  train.c
src/uapps/marklin/train2/: model.c  train.c
src/uapps/marklin/tui/: tui.c
src/uapps/rps/: client.c  server.c
src/uapps/srr_perf/: srr_perf.c
src/ulibs/: clock.c  io.c  name.c  random.c  syscall.c
